# photo_nametag

./: LICENSE  README.md  pyproject.toml
data/face_cut/in_image/: memo.txt
photo_nametag/: exif.py  face.py  face_cut.py  main.py  make_model.py  name_tag.py
